@@ -320,6 +320,7 @@ ct(commit,zone=5)
 ct(commit,mark=0xa0a0a0a0/0xfefefefe)
 ct(commit,label=0x1234567890abcdef1234567890abcdef/0xf1f2f3f4f5f6f7f8f9f0fafbfcfdfeff)
 ct(commit,helper=ftp)
+ct(commit,helper=tftp)
 ct(nat)
 ct(commit,nat(src))
 ct(commit,nat(dst))
