@@ -201,6 +201,9 @@ ffff 0018 00002320 0007 001f 00010004 000000000000f009
 # actions=ct(alg=ftp)
 ffff 0018 00002320 0023 0000 00000000 0000 FF 000000 0015
 
+# actions=ct(alg=tftp)
+ffff 0018 00002320 0023 0000 00000000 0000 FF 000000 0045
+
 # actions=ct(commit,nat(src))
 ffff 0028 00002320 0023 0001 00000000 0000 FF 000000 0000 dnl
 ffff 0010 00002320 0024 00 00 0001 0000
